deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dfactory
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dfactory.internal.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dfactory
                port:
                  number: 80
